# VisionStream

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  run_benchmark.py  run_experiment.py  setup.py
configs/: default.yaml  v2_elic.yaml
core/codec/: arithmetic_coder.cu  arithmetic_coder.h  entropy_model.h
core/graph/: graph_manager.cpp  graph_manager.h  node.h
core/memory/: vision_buffer.cu  vision_buffer.h  vision_buffer.py
docker/: Dockerfile  docker-compose.yml  requirements.txt
envs/conda/: environment_cuda118.yml  environment_cuda121.yml  environment_cuda128.yml
envs/docker/: Dockerfile.cuda118  Dockerfile.cuda121  Dockerfile.cuda128  docker-compose.yml
envs/requirements/: requirements_cuda118.txt  requirements_cuda121.txt  requirements_cuda128.txt
modules/: __init__.py  registry.py
modules/codecs/: __init__.py  ffmpeg_codec.py  jpeg_codec.py  neural_codec.py  v2_elic.py
modules/dataloader/: dali_loader.py
modules/datasets/: __init__.py  builtin_datasets.py  hub_datasets.py  video_loader.py
modules/external_codec/: base_codec.py
modules/pipeline/: vcm_pipeline.py
modules/preprocessing/: basic_transforms.py  builtin_transforms.py  channel_sim.py
modules/vision_models/: __init__.py  classification.py  depth.py  segmentation.py  split_model.py  super_resolution.py  tracking.py  yolo_model.py  yolo_node.py
python_api/: bindings.cpp
scripts/: launch_dashboard.sh  launch_docker.sh  setup_conda.sh  setup_pip.sh
tests/: test_custom_codec.py  test_entropy.py  test_kodak.py  test_phase10_adapters.py  test_pipeline.py  test_pipeline_e2e.py  test_run.py  test_server_integration.py  test_server_lic_training.py  test_server_modules.py  test_v2.py
tools/: benchmark_utils.py
tools/metrics/: adapters.py  builtin_metrics.py  evaluator.py  task_loss.py
tools/mlops/: monitor.py  versioning.py
tools/ui/: dashboard.py
user_workspace/custom_codecs/learned_compression/: __init__.py  entropy.py  entropy_gmm.py  model.py  model_v2.py  network.py  network_v2.py  train.py  train_v2.py
user_workspace/experiments/: experiment_jpeg_20260312_105605.json
